--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,900;1,300&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="libs/font-mfizz-2.4.1/font-mfizz.css">
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="stylesheet" href="styles/navigation.css">
   <link rel="stylesheet" href="styles/card.css">
@@ -108,14 +109,18 @@
       <div class="go-up-container js-navigation">
         <a href="#main" class="link"><i class=" fas fa-arrow-up"></i></a>
       </div>
-
+      <div class="bottom-navigation">
+        <div class="contact-cta"><i class="fas fa-address-book"></i></div>
+        <div class="contact-cta"><i class="fas fa-at"></i></div>
+        <div class="contact-cta"><i class="fas fa-phone"></i></div>
+      </div>
 
       <nav id="navigation">
         <ul>
           <li class="menu-item leistungen"><a href="#services">Leistungen</a></li>
           <li class="menu-item erfahrungen"><a href="#">Erfahrungen</a></li>
           <li class="menu-item hintergruende"><a href="#">Hintergründe</a></li>
-          <li class="menu-item technologien"><a href="#contact">Technologien</a></li>
+          <li class="menu-item technologien"><a href="#technologien">Technologien</a></li>
           <li class="menu-item friede"><a href="#welcomeText">Friede</a></li>
         </ul>
       </nav>
@@ -132,7 +137,7 @@
         <div class="fd-container"></div>
         <div class="hero-deine hero-text " data-depth='4' data-vdepth="1">
           <span>deine
-            nächste</span><wbr
+            nächste</span><wbr>
           <span>Webseite bauen!</span>
         </div>
         <div class="hero-kontakt" data-depth='1' data-vdepth="0">
@@ -445,10 +450,87 @@
                 <div class="more clickable">
                   Genauer..
                 </div>
+                <div class="skit">Transparente Webentwicklung mit Kick</div>
               </div>
             </div>
           </div>
         </div>
+      </section>
+      <section id="technologien">
+        <div class="tech-skills">
+          <div class="line first"><i class="icon-jquery tech-stack"></i>
+            <i class="icon-git tech-stack"></i>
+            <i class="icon-gulp tech-stack"></i>
+            <i class="icon-grunt tech-stack"></i>
+            <i class="icon-npm tech-stack"></i>
+            <i class="icon-codepen tech-stack"></i>
+            <i class="icon-wordpress tech-stack"></i>
+            <i class="icon-mssql tech-stack"></i>
+            <i class="icon-git tech-stack"></i>
+            <i class="icon-gulp tech-stack"></i>
+            <i class="icon-grunt tech-stack"></i>
+            <i class="icon-npm tech-stack"></i>
+            <i class="icon-codepen tech-stack"></i>
+            <i class="icon-wordpress tech-stack"></i>
+            <i class="icon-mssql tech-stack"></i>
+            <i class="icon-git tech-stack"></i>
+            <i class="icon-gulp tech-stack"></i>
+            <i class="icon-grunt tech-stack"></i>
+            <i class="icon-npm tech-stack"></i>
+            <i class="icon-codepen tech-stack"></i>
+            <i class="icon-wordpress tech-stack"></i>
+            <i class="icon-mssql tech-stack"></i>
+            <i class="icon-git tech-stack"></i>
+            <i class="icon-gulp tech-stack"></i>
+            <i class="icon-grunt tech-stack"></i>
+            <i class="icon-npm tech-stack"></i>
+            <i class="icon-codepen tech-stack"></i>
+            <i class="icon-wordpress tech-stack"></i>
+            <i class="icon-mssql tech-stack"></i>
+          </div>
+          <div class="line second"><i class="icon-mysql tech-stack"></i>
+            <i class="icon-svg tech-stack"></i>
+            <i class="icon-csharp tech-stack"></i>
+            <i class="icon-css3 tech-stack"></i>
+            <i class="icon-html5 tech-stack"></i>
+            <i class="icon-javascript tech-stack"></i>
+            <i class="icon-php tech-stack"></i>
+            <i class="icon-sass tech-stack"></i>
+            <i class="icon-svg tech-stack"></i>
+            <i class="icon-csharp tech-stack"></i>
+            <i class="icon-css3 tech-stack"></i>
+            <i class="icon-html5 tech-stack"></i>
+            <i class="icon-javascript tech-stack"></i>
+            <i class="icon-php tech-stack"></i>
+            <i class="icon-sass tech-stack"></i>
+            <i class="icon-svg tech-stack"></i>
+            <i class="icon-csharp tech-stack"></i>
+            <i class="icon-css3 tech-stack"></i>
+            <i class="icon-html5 tech-stack"></i>
+            <i class="icon-javascript tech-stack"></i>
+            <i class="icon-php tech-stack"></i>
+            <i class="icon-sass tech-stack"></i>
+            <i class="icon-svg tech-stack"></i>
+            <i class="icon-csharp tech-stack"></i>
+            <i class="icon-css3 tech-stack"></i>
+            <i class="icon-html5 tech-stack"></i>
+            <i class="icon-javascript tech-stack"></i>
+            <i class="icon-php tech-stack"></i>
+            <i class="icon-sass tech-stack"></i>
+          </div>
+        </div>
+      </section>
+      <section></section>
+      <section id="gallery">
+        <!-- <div class="gallery">
+          <h1>Friede<br />Freude</br>Eier</br>kuchen</h1>
+
+        </div> -->
+        <div class="darker">
+          <h1>Friede<br />Freude</br>Eier</br>kuchen</h1>
+          <img src="images/hamburg_2013_0868.JPG">
+        </div>
+
       </section>
       <section class="welcomeText" id="welcomeText">
         <div class="welcomeContainer">
