--- a/index.html
+++ b/index.html
@@ -465,59 +465,73 @@
       </section>
       <section id="special-offer">
         <div class="star">
+          <style type="text/css">
+            .st0 {
+              fill: none;
+              stroke: #5296B6;
+              stroke-width: 8;
+              stroke-linejoin: round;
+            }
+
+            .st1 {
+              fill: #1D71B8;
+            }
+
+            .st2 {
+              fill: #36A9E1;
+            }
+
+            .st3 {
+              fill: #5296B6;
+            }
+
+            .st4 {
+              fill: #D0FDEA;
+            }
+
+            .st5 {
+              fill: #006494;
+            }
+          </style>
           <svg version="1.1" id="svg7351" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-            x="0px" y="0px" viewBox="0 0 141.4 144.2" style="enable-background:new 0 0 141.4 144.2;"
-            xml:space="preserve">
-            <style type="text/css">
-              .st0 {
-                fill: none;
-                stroke: #5296B6;
-                stroke-width: 8;
-                stroke-linejoin: round;
-              }
+            x="0px" y="0px" style="enable-background:new 0 0 141.4 144.2;" xml:space="preserve">
 
-              .st1 {
-                fill: #1D71B8;
-              }
-
-              .st2 {
-                fill: #36A9E1;
-              }
-
-              .st3 {
-                fill: #5296B6;
-              }
-
-              .st4 {
-                fill: #D0FDEA;
-              }
-
-              .st5 {
-                fill: #006494;
-              }
-            </style>
-            <path id="path3238" class="st0" d="M75.7,111.8l-15.5,0.8l45.5,27.6l8.7-5.9l-8.7-46l31.7-33L133.8,44l-52.1-1.6l11.8,10.7L76,20
+            <symbol id="star-use" viewBox="0 0 141.4 144.2">
+              <path id="path3238" class="st0" d="M75.7,111.8l-15.5,0.8l45.5,27.6l8.7-5.9l-8.7-46l31.7-33L133.8,44l-52.1-1.6l11.8,10.7L76,20
 	L61.9,4L42.4,47L4,57.6L29.6,87l-9.1,48.4l21.2-4.3L75.7,111.8L75.7,111.8z" />
-            <path id="path7727" class="st1" d="M75.7,111.8l-15.5,0.8l45.5,27.6l8.7-5.9l-8.7-46l31.7-33L133.8,44l-52.1-1.6l11.8,10.7L76,20
+              <path id="path7727" class="st1" d="M75.7,111.8l-15.5,0.8l45.5,27.6l8.7-5.9l-8.7-46l31.7-33L133.8,44l-52.1-1.6l11.8,10.7L76,20
 	L61.9,4L42.4,47L4,57.6L29.6,87l-9.1,48.4l21.2-4.3L75.7,111.8L75.7,111.8z" />
-            <path id="line262" class="st2"
-              d="M60.2,112.6l-39.7,22.8l7.1-17.7l29-17.2C56.6,100.5,60.2,112.6,60.2,112.6z" />
-            <path id="line270" class="st2" d="M14.6,60.3l19.6,22L29.6,87L4,57.6L14.6,60.3z" />
-            <path id="line278" class="st3" d="M58.1,21L43.6,52.8L42.4,47L61.9,4C61.9,4,58.1,21,58.1,21z" />
-            <path id="path7659" class="st3" d="M105.7,140.2l-45.5-27.6l-3.6-12.1l31.6,18.4" />
-            <path id="line266" class="st3" d="M27.6,117.7l-7.1,17.7L29.6,87l4.6-4.7C34.2,82.3,27.6,117.7,27.6,117.7z" />
-            <path id="line250" class="st2" d="M95.7,84.3L133.8,44l-25.5,7.4L81.7,79.9" />
-            <path id="inner" class="st4" d="M56.6,100.5l-29,17.2l6.6-35.4l-19.6-22l29-7.5L58.1,21 M56.6,100.5l31.6,18.4l-6.5-39l26.6-28.5
+              <path id="line262" class="st2"
+                d="M60.2,112.6l-39.7,22.8l7.1-17.7l29-17.2C56.6,100.5,60.2,112.6,60.2,112.6z" />
+              <path id="line270" class="st2" d="M14.6,60.3l19.6,22L29.6,87L4,57.6L14.6,60.3z" />
+              <path id="line278" class="st3" d="M58.1,21L43.6,52.8L42.4,47L61.9,4C61.9,4,58.1,21,58.1,21z" />
+              <path id="path7659" class="st3" d="M105.7,140.2l-45.5-27.6l-3.6-12.1l31.6,18.4" />
+              <path id="line266" class="st3"
+                d="M27.6,117.7l-7.1,17.7L29.6,87l4.6-4.7C34.2,82.3,27.6,117.7,27.6,117.7z" />
+              <path id="line250" class="st2" d="M95.7,84.3L133.8,44l-25.5,7.4L81.7,79.9" />
+              <path id="inner" class="st4" d="M56.6,100.5l-29,17.2l6.6-35.4l-19.6-22l29-7.5L58.1,21 M56.6,100.5l31.6,18.4l-6.5-39l26.6-28.5
 	l-36.1-1.7L58.1,21" />
-            <g id="g4171" transform="translate(-1.187 -1.187)">
-              <path id="line260" class="st5"
-                d="M89.4,120.1l17.5,21.3l-10-55.9l-14-4.4C82.9,81.1,89.4,120.1,89.4,120.1z" />
-              <path id="path7657" class="st5" d="M63.1,5.2l-3.8,17l14.1,28.7l9.5-7.3C82.9,43.6,63.1,5.2,63.1,5.2z" />
-              <path id="line274" class="st5" d="M43.6,48.2L5.2,58.8l10.6,2.7l29-7.5C44.8,54,43.6,48.2,43.6,48.2z" />
-              <path id="line244" class="st5" d="M109.5,52.6l-36.1-1.7l9.5-7.3l52.1,1.6L109.5,52.6z" />
-            </g>
+              <g id="g4171" transform="translate(-1.187 -1.187)">
+                <path id="line260" class="st5"
+                  d="M89.4,120.1l17.5,21.3l-10-55.9l-14-4.4C82.9,81.1,89.4,120.1,89.4,120.1z" />
+                <path id="path7657" class="st5" d="M63.1,5.2l-3.8,17l14.1,28.7l9.5-7.3C82.9,43.6,63.1,5.2,63.1,5.2z" />
+                <path id="line274" class="st5" d="M43.6,48.2L5.2,58.8l10.6,2.7l29-7.5C44.8,54,43.6,48.2,43.6,48.2z" />
+                <path id="line244" class="st5" d="M109.5,52.6l-36.1-1.7l9.5-7.3l52.1,1.6L109.5,52.6z" />
+              </g>
+            </symbol>
           </svg>
 
+        </div>
+        <div class="stars">
+          <svg class="star-1 ">
+            <use href="#star-use"></use>
+          </svg>
+          <svg class="star-2 ">
+            <use href="#star-use"></use>
+          </svg>
+          <svg class="star-3">
+            <use href="#star-use"></use>
+          </svg>
         </div>
         <h2 class="middle">So sparst du Geld</h2>
         <div class="date">Juli 2021</div>
